--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous" />
   <!-- style css  -->
   <link rel="stylesheet" href="./assets/css/styles.css" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous"> -->
 
   <title>Naresh Mitawa</title>
 </head>
@@ -39,8 +39,7 @@
       <div>
         <a href="#" class="nav__logo">Naresh Mitawa</a>
       </div>
-        <!-- dfgdfg -->
-        <h1>dfgdf</h1>
+
       <div class="nav__menu" id="nav-menu">
         <ul class="nav__list">
           <li class="nav__item">
@@ -59,7 +58,7 @@
             <a href="#contact" class="nav__link">Contact</a>
           </li>
           <li class="nav__item">
-            <a href="./assets/Resume_Naresh_Mitawa_updated.pdf" class="nav__link">Resume</a>
+            <a href="./assets/Naresh Mitawa.pdf" class="nav__link">Resume</a>
           </li>
         </ul>
       </div>
@@ -178,33 +177,11 @@
         <div class="work__img">
           <a href="https://company-web.vertipridesolutions.in/" target="_blank"><img src="./assets/img/IT APP.jpg"
               alt="Build in React JS WebApp" /></a>
-          <div class="accordion" id="accordionExample">
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="headingTwo">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                  Overview
-                </button>
-              </h2>
-              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
-                data-bs-parent="#accordionExample">
-                <div class="accordion-body">
-                  <p class="">Tech:- React JS</p>
-                  <div class="text-left w-100">
-                    <p>Custom Hooks, Handle components from different stages.</p>
-                    <p>Form Validations, API data fatch, Routes, Google recaptured, Dynamic Pages</p>
-                  </div>
-
-                </div>
-              </div>
-            </div>
-
-          </div>
         </div>
         <div class="work__img">
-          <a href="https://github.com/mitawa0001/Gfew-webapp" target="_blank"><img src="./assets/img/react-1.jpeg"
+          <a href="https://foxeresto.vercel.app/" target="_blank"><img src="./assets/img/IMG_2.jpeg"
               alt="Custom React-App UI" /></a>
-          <div class="accordion" id="accordionExample">
+          <!-- <div class="accordion" id="accordionExample">
             <div class="accordion-item">
               <h2 class="accordion-header" id="headingTwo">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -212,31 +189,32 @@
                   Overview
                 </button>
               </h2>
-              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="collapseTwo"
                 data-bs-parent="#accordionExample">
                 <div class="accordion-body">
                   <p class="">Tech:- React JS</p>
                   <div class="text-left w-100">
-                    <p>AdminLTE Dashboard</p>
-                    <p>Routing,Componment life cycle used, Material UI</p>
+                    <p>Fully Clinic Pet(Animals)</p>
+                    <p>Implement API(Axios) fatch data, Anamitation,using Hooks, Dark Theme Imp.</p>
                   </div>
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
+
         <div class="work__img">
-          <a href="https://www.brartamber.com/" target="_blank"><img src="./assets/img/mobile_view.jpg"
+          <a href="#"><img src="./assets/img/mobile_view.jpg"
               alt="Wordpress" /></a>
-          <div class="accordion" id="accordionExample">
+          <!-- <div class="accordion" id="accordionExample">
             <div class="accordion-item">
-              <h2 class="accordion-header" id="headingTwo">
+              <h2 class="accordion-header" id="headingThree">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  data-bs-target="#collapneThree" aria-expanded="false" aria-controls="collapneThree">
                   Overview
                 </button>
               </h2>
-              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+              <div id="collapneThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
                 data-bs-parent="#accordionExample">
                 <div class="accordion-body">
                   <p class="">Tech:- React JS</p>
@@ -247,12 +225,12 @@
                 </div>
               </div>
             </div>
+          </div> -->
 
-          </div>
         </div>
         <div class="work__img">
-          <a href="https://cdmdance.com/" target="_blank"><img src="./assets/img/parallex.jpeg" alt="Wordpress" /></a>
-          <div class="accordion" id="accordionExample">
+          <a href="./assets/parallax website/index.html" target="_blank"><img src="./assets/img/parallex.jpeg" alt="Wordpress" /></a>
+          <!-- <div class="accordion" id="accordionExample">
             <div class="accordion-item">
               <h2 class="accordion-header" id="headingTwo">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -272,13 +250,13 @@
               </div>
             </div>
 
-          </div>
+          </div> -->
         </div>
 
         <div class="work__img">
           <a href="./assets/Square Yards Hotel/index.html" target="_blank"><img src="./assets/img/custom hotel.jpeg"
               alt="Custom hotel" /></a>
-          <div class="accordion" id="accordionExample">
+          <!-- <div class="accordion" id="accordionExample">
             <div class="accordion-item">
               <h2 class="accordion-header" id="headingTwo">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -298,12 +276,12 @@
               </div>
             </div>
 
-          </div>
+          </div> -->
         </div>
         <div class="work__img">
-          <a href="./assets/parallax website/index.html" target="_blank"><img src="./assets/img/work5.png"
+          <a href="#"><img src="./assets/img/work5.png"
               alt="Custom Motion Website" /></a>
-          <div class="accordion" id="accordionExample">
+          <!-- <div class="accordion" id="accordionExample">
             <div class="accordion-item">
               <h2 class="accordion-header" id="headingTwo">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -322,7 +300,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
@@ -349,7 +327,7 @@
   <footer class="footer">
     <p class="footer__title">Naresh Mitawa</p>
     <div class="footer__social">
-      <a href="https://www.linkedin.com/in/naresh-68693b171/" class="footer__icon" target="_blank">
+      <a href="https://www.linkedin.com/in/naresh-mitawa-278aa6279/" class="footer__icon" target="_blank">
         <i class="fab fa-linkedin-in"></i>
       </a>
       <a href="https://www.instagram.com/nsmitawa_/" class="footer__icon" target="_blank">
