updated after buzzclan

--- a/index.html
+++ b/index.html
@@ -78,7 +78,6 @@
           <span class="home__title-color">Naresh</span> a<br />
           Developer
         </h1>
-
         <a href="#contact" class="button">Contact</a>
       </div>
 
@@ -86,13 +85,11 @@
         <a href="https://www.linkedin.com/in/naresh-68693b171/" class="home__social-icon" target="_blank">
           <i class="fab fa-linkedin-in"></i>
         </a>
-        <a href="https://www.instagram.com/nsmitawa_/" class="home__social-icon" target="_blank">
-          <i class="fab fa-instagram"></i>
-        </a>
-        <a href="https://twitter.com/nsmmitawa" class="home__social-icon" target="_blank">
-          <i class="fab fa-twitter"></i></a>
         <a href="https://github.com/mitawa0001" class="home__social-icon" target="_blank">
           <i class="fab fa-github"></i></a>
+        <a href="https://twitter.com/nsmmitawa" class="home__social-icon" target="_blank">
+          <i class="fab fa-twitter"></i></a>
+
       </div>
 
       <div class="home__img">
@@ -112,9 +109,10 @@
         <div>
           <h2 class="about__subtitle">A Developer</h2>
           <p class="about__text">
-            Passionate about programming & Tech has worked with startups.
-            Believe in Innovation and Creative Design. Involved in Stocks & Derivatives Market. Working as a
-            developer to have some Experience.
+            I am passionate about programming and technology, with experience working in both startups and a large tech
+            company. I believe in the power of innovation and creative design to drive progress. Alongside my work as a
+            developer, where I'm gaining valuable experience, I'm also actively involved in the stocks and derivatives
+            market, continually expanding my knowledge and skills.
           </p>
         </div>
       </div>
@@ -128,10 +126,9 @@
         <div>
           <h2 class="skills__subtitle">Profesional Skills</h2>
           <p class="skills__text">
-            These are the skills REACT JS,JQUERY,JAVASCRIPT,MATERIAL UI,ANGULAR(Basic) which I am good at or I am
-            learning. These
-            skills help me stand out from others. I love to have some
-            discussions to improve over the skills & make a good start.
+            I have a strong foundation in HTML, CSS, Bootstrap, JavaScript, Material UI, and React JS, with basic
+            knowledge of Angular. My skills are enhanced by live project experience, which helps me stand out. I'm eager
+            to engage in discussions to refine these skills and make a strong start in my career.
           </p>
           <div class="skills__data">
             <div class="skills__names">
@@ -181,126 +178,24 @@
         <div class="work__img">
           <a href="https://foxeresto.vercel.app/" target="_blank"><img src="./assets/img/IMG_2.jpeg"
               alt="Custom React-App UI" /></a>
-          <!-- <div class="accordion" id="accordionExample">
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="headingTwo">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                  Overview
-                </button>
-              </h2>
-              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="collapseTwo"
-                data-bs-parent="#accordionExample">
-                <div class="accordion-body">
-                  <p class="">Tech:- React JS</p>
-                  <div class="text-left w-100">
-                    <p>Fully Clinic Pet(Animals)</p>
-                    <p>Implement API(Axios) fatch data, Anamitation,using Hooks, Dark Theme Imp.</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div> -->
+
         </div>
 
         <div class="work__img">
-          <a href="#"><img src="./assets/img/mobile_view.jpg"
+          <a href="#"><img src="./assets/img/mobile_view.jpg" alt="Wordpress" /></a>
+        </div>
+        <div class="work__img">
+          <a href="./assets/parallax website/index.html" target="_blank"><img src="./assets/img/parallex.jpeg"
               alt="Wordpress" /></a>
-          <!-- <div class="accordion" id="accordionExample">
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="headingThree">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapneThree" aria-expanded="false" aria-controls="collapneThree">
-                  Overview
-                </button>
-              </h2>
-              <div id="collapneThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
-                data-bs-parent="#accordionExample">
-                <div class="accordion-body">
-                  <p class="">Tech:- React JS</p>
-                  <div class="text-left w-100">
-                    <p>Mobile view only,Protected Routes,AdminLTE panel,QR code scanner functionality </p>
-                    <p>Form Validations, API data fatch, Routes, Google recaptured, Dynamic Pages</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div> -->
-
-        </div>
-        <div class="work__img">
-          <a href="./assets/parallax website/index.html" target="_blank"><img src="./assets/img/parallex.jpeg" alt="Wordpress" /></a>
-          <!-- <div class="accordion" id="accordionExample">
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="headingTwo">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                  Overview
-                </button>
-              </h2>
-              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
-                data-bs-parent="#accordionExample">
-                <div class="accordion-body">
-                  <p class="">Tech:- Custom HTML,CSS,JAVASCCRIPT</p>
-                  <div class="text-left w-100">
-                    <p>use scorrling effect in header, use js for hover layout</p>
-                    <p>POC of the project as per client need</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-          </div> -->
         </div>
 
         <div class="work__img">
           <a href="./assets/Square Yards Hotel/index.html" target="_blank"><img src="./assets/img/custom hotel.jpeg"
               alt="Custom hotel" /></a>
-          <!-- <div class="accordion" id="accordionExample">
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="headingTwo">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                  Overview
-                </button>
-              </h2>
-              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
-                data-bs-parent="#accordionExample">
-                <div class="accordion-body">
-                  <p class="">Tech:- Custom HTML,CSS,BOOTSTRAP</p>
-                  <div class="text-left w-100">
-                    <p>Themeforest theme build as custom as well as responsive part</p>
-                    <p>Componment building exect to the theme</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-          </div> -->
         </div>
         <div class="work__img">
-          <a href="#"><img src="./assets/img/work5.png"
-              alt="Custom Motion Website" /></a>
-          <!-- <div class="accordion" id="accordionExample">
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="headingTwo">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                  Overview
-                </button>
-              </h2>
-              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
-                data-bs-parent="#accordionExample">
-                <div class="accordion-body">
-                  <p class="">Portfolio Management</p>
-                  <div class="text-left w-100">
-                    <p>Investment Adviser, Stock Trading, Future and Options, Mutual Funds</p>
-                    <p>Analytics,ITR Filling</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div> -->
+          <a href="#"><img src="./assets/img/work5.png" alt="Custom Motion Website" /></a>
+
         </div>
       </div>
     </section>
