--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <a href="#contact" class="nav__link">Contact</a>
           </li>
           <li class="nav__item">
-            <a href="./assets/Naresh Mitawa.pdf" class="nav__link">Resume</a>
+            <a href="./assets/Naresh_Resume_ReactJs_2Year.pdf" class="nav__link">Download Resume</a>
           </li>
         </ul>
       </div>
