--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <a href="#contact" class="nav__link">Contact</a>
           </li>
           <li class="nav__item">
-            <a href="./assets/Naresh_Resume_ReactJs_2Year.pdf" class="nav__link">Download Resume</a>
+            <a href="./assets/Naresh-Resume-ReactJS-2Years (1).pdf" class="nav__link">Download Resume</a>
           </li>
         </ul>
       </div>
@@ -109,10 +109,13 @@
         <div>
           <h2 class="about__subtitle">A Developer</h2>
           <p class="about__text">
-            I am passionate about programming and technology, with experience working in both startups and a large tech
-            company. I believe in the power of innovation and creative design to drive progress. Alongside my work as a
-            developer, where I'm gaining valuable experience, I'm also actively involved in the stocks and derivatives
-            market, continually expanding my knowledge and skills.
+            I am a passionate developer with 2+ years of experience in building innovative and user-friendly web
+            applications. I specialize in React.js, Material
+            UI, and JavaScript, with a strong focus on creating impactful solutions that enhance user experience.
+
+            Beyond development, I am actively involved in the stocks and derivatives market, where I sharpen my
+            analytical and problem-solving skills. I thrive on innovation, creative design, and continuous learning,
+            always eager to explore new technologies and contribute to meaningful projects.
           </p>
         </div>
       </div>
@@ -231,7 +234,7 @@
       <a href="https://twitter.com/nsmmitawa" class="footer__icon" target="_blank">
         <i class="fab fa-twitter"></i></a>
     </div>
-    <p>&#169; 2023 copyright all right reserved</p>
+    <p>&#169; 2025 copyright all right reserved</p>
   </footer>
 
   <!--===== SCROLL REVEAL =====-->
